// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toFailWithDetail reports details correctly on a failure due to a success result: toFailTestAndMatchSnapshot 1`] = `
"expect(received).toFailWith(expected)
Expected:
  Failure with \\"hello\\"
  Detail: \\"\\"detail\\"\\"
Received:
  Success with \\"\\"hello\\"\\"
  Detail: \\"undefined\\""
`;

exports[`.toFailWithDetail reports details correctly on a failure due to non-matching detail value: toFailTestAndMatchSnapshot 1`] = `
"expect(received).toFailWith(expected)
Expected:
  Failure with \\"error\\"
  Detail: \\"\\"detail\\"\\"
Received:
  Failure with \\"error\\"
  Detail: \\"\\"other detail\\"\\""
`;

exports[`.toFailWithDetail reports details correctly on a failure due to non-matching failure value: toFailTestAndMatchSnapshot 1`] = `
"expect(received).toFailWith(expected)
Expected:
  Failure with \\"error\\"
  Detail: \\"\\"detail\\"\\"
Received:
  Failure with \\"oops\\"
  Detail: \\"\\"detail\\"\\""
`;

exports[`.toFailWithDetail reports details correctly on a failure with a .not: toFailTestAndMatchSnapshot 1`] = `
"expect(received).not.toFailWith(expected)
Expected:
  Not failure with \\"oops\\"
  Detail: \\"\\"detail\\"\\"
Received:
  Failure with \\"oops\\"
  Detail: \\"\\"detail\\"\\""
`;
